<resources>
    <string name="app_name">BlackJack</string>
    <string name="bet">Bet</string>
    <string name="hit">Hit</string>
    <string name="the_player_s_third_card_dealt">The player\'s third card dealt</string>
    <string name="the_player_s_second_card_dealt">The player\'s second card dealt</string>
    <string name="the_player_s_first_card_dealt">The player\'s first card dealt</string>
    <string name="dealer_s_first_card">dealer\'s first card</string>
    <string name="dealer_s_second_card">dealer\'s second card</string>
    <string name="stand">Stand</string>
    <string name="gamewin_loss">GameWin/Loss</string>
    <string name="player_bust">You have busted!</string>
    <string name="dealer_bust">Dealer has busted!\nYou Won!</string>
    <string name="blackjack">You have blackjack!</string>
    <string name="add_bet">Add</string>
    <string name="subtract_bet">Subtract</string>
    <string name="push">It is a push. You get your money back.</string>
    <string name="player_won">You won!</string>
    <string name="dealer_won">Dealer wins!</string>
    <string name="double_down">Double Down</string>
    <string name="double_down_button">Double down button</string>
    <string name="chip_value_of_one">Chip value of one.</string>
    <string name="chip_value_of_five">Chip value of five.</string>
    <string name="chip_value_of_ten">Chip value of ten.</string>
    <string name="chip_value_of_twenty_five">Chip value of twenty-five.</string>
    <string name="chip_value_of_one_hundred">Chip value of one-hundred.</string>
    <string name="the_amount_of_chips_the_user_has">The amount of chips the user has.</string>
    <string name="amount_of_chips">Amount of Chips: </string>
    <string name="bet_button_text">Bet</string>
    <string name="button_to_go_to_settings">Button to go to settings</string>
    <string name="back_to_main_activity">Back to main activity</string>
    <string name="blackjack_test">BlackJack Test</string>
    <string name="dealerBust_test">Dealer Bust Test</string>
    <string name="PlayerBust_test">Player Bust Test</string>
    <string name="dealerWin_test">Dealer Win Test</string>
    <string name="PlayerWin_test">Player Win Test</string>
    <string name="Ace_test">Ace Test</string>
    <string name="enter_test_number">Enter Test Number</string>
    <string name="number_of_test_cases">-1</string>
    <string name="surrender">Surrender</string>
</resources>
